@@ -18,7 +18,7 @@ set( PACKAGE_DIRECTORY ${PROJECT_BINARY_DIR}/package )
 
 set( FLIGHTCREW_MAJOR_VERSION 0 )
 set( FLIGHTCREW_MINOR_VERSION 9 )
-set( FLIGHTCREW_REVISION_VERSION 1 )
+set( FLIGHTCREW_REVISION_VERSION 3 )
 set( FLIGHTCREW_FULL_VERSION ${FLIGHTCREW_MAJOR_VERSION}.${FLIGHTCREW_MINOR_VERSION}.${FLIGHTCREW_REVISION_VERSION} )
 
 # Check if platform is 64 bit
