@@ -1,3 +1,6 @@
+FlightCre pre-v0.9.3
+  - provide warning for external urls that are not properly utf-8 encoded
+
 FlightCrew pre-v0.9.2
   - update for more precise error offset interface
   - Build Windows binary with MinGW to remove VC++ dependencies
